# ChangeLog for app-text/lcdf-typetools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.106 2014/10/10 10:08:06 aballier Exp $

*lcdf-typetools-2.104 (10 Oct 2014)

  10 Oct 2014; Alexis Ballier <aballier@gentoo.org>
  +lcdf-typetools-2.104.ebuild:
  version bump

*lcdf-typetools-2.100 (09 Mar 2014)

  09 Mar 2014; Alexis Ballier <aballier@gentoo.org>
  +lcdf-typetools-2.100.ebuild:
  version bump

*lcdf-typetools-2.99 (27 Aug 2013)

  27 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  +lcdf-typetools-2.99.ebuild:
  version bump

  08 May 2013; Alexis Ballier <aballier@gentoo.org>
  -lcdf-typetools-2.91.ebuild, -lcdf-typetools-2.92.ebuild,
  -lcdf-typetools-2.94.ebuild, -lcdf-typetools-2.95.ebuild:
  remove old

*lcdf-typetools-2.98 (08 May 2013)

  08 May 2013; Alexis Ballier <aballier@gentoo.org>
  +lcdf-typetools-2.98.ebuild:
  version bump

  01 Mar 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for sh, wrt bug #456468

  28 Feb 2013; Jeroen Roovers <jer@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for HPPA (bug #456468).

  20 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for s390, wrt bug #456468

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for sparc, wrt bug #456468

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for alpha, wrt bug #456468

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for ia64, wrt bug #456468

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for ppc, wrt bug #456468

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for ppc64, wrt bug #456468

  12 Feb 2013; Agostino Sarubbo <ago@gentoo.org> lcdf-typetools-2.97.ebuild:
  Stable for x86, wrt bug #456468
