@@ -7,16 +7,16 @@ DIST lcdf-typetools-2.97.tar.gz 616431 SHA256 761746041c669fa3673a3e90ec7a247abd
 DIST lcdf-typetools-2.98.tar.gz 621485 SHA256 26b9be336b3d575555436d139e5a9c40fea58f5b9468516f974ca7bd1eeae17f SHA512 9ab6b9a7f1cdbbe977c9de2021931e5db94d2d03c185868b96789d58e0c0a0cd76f7c5bb18b469ed7d90bfca31b8c68c67dfd8d8cf863300c130fc61d75e75e6 WHIRLPOOL 0135de9fbe79d3a5e63690b17122690f120ae07365a0aa75b0f3ac642e443d88992a877dc346e4bb3e736a59b13ed69040e0d7a1430476e81241efa1d08e088c
 DIST lcdf-typetools-2.99.tar.gz 627203 SHA256 cbb0ed8c42d078fb216b8f4b8ca7a29e0ad3c1969f580a6f2558c829a472adff SHA512 5b0c7a95dfeacd9aaa8eca18616a6df0446ef17b6651651c20c83af6fbf6d50ff5f4d81c94c53aedfec2c7423047c62a3a848cce6907e8900d08cd0ee2b7a4c5 WHIRLPOOL ab00a53d78d5f3e175f573adc7d25da46beeaf2b56df06b1d7db563ad75e02c50706cc396955cf479a2e3f240d9bf5bb2b8c0fa303f1caa8a282db22179e2d58
 EBUILD lcdf-typetools-2.100.ebuild 875 SHA256 0640951ccb913b91fae7419cfcb4f6c380ea73f5f39d9fb9f45ed268c872f15a SHA512 70a59e31a7ba2ae4d80625771a042b37c320d0fbdd38378d0e9482e8bab452ba5a90909c6f2d35cad5b6517609aa3d0632b9e730f259bbe7bb9d574dcd3e6276 WHIRLPOOL 1b3cf0ee9933447e85d874d9c5dd59b2fc03043a3bd329a4e8f962f1a28c09c5a5144f1fbc27e85f10dafb54c1baf23430d3e7b306d6dd43e5239742592f51b3
-EBUILD lcdf-typetools-2.104.ebuild 875 SHA256 e8f4c07b7d8b2ceaa625b71063b36ff0f4b8a7b7ba8ab156bdcee409deb404d5 SHA512 3afba9c455efdd3ab42dd4aacbeaa20b9e6c3b9095c437354d089894fbcf8b1a2fa25c34b998a3e8b8c939aa61d75c90cca568d64f8e1892942bb1ef4cc360de WHIRLPOOL 494a344b793d9f007f4333797fedf70d7be476a2aa0131a7ec43bda37b753176785603c5ddf9ffb1308d610a493c540fa9f60176cb71b6ea0cecdeeb3186d0fe
+EBUILD lcdf-typetools-2.104.ebuild 1070 SHA256 45478134fb9a0ffb7e710f820dba2e0ed28bc392c7fea9d36803a76d01d446f3 SHA512 f507cbba91c84328c012ee6d550d4c9d48a9f25410ffe488b5d4e57897c6d923a2e192f9bbec2c0e6634fde8ba0222fa04746d39512ca055d0aad6815dcfe631 WHIRLPOOL 612f8a2fbf08301f64e558e16b3b85c4ed4fedf4f19c1dadc1301e34d591675371a38453ca9573d9ea893ec30382f0e16709944919ed1bf5518dae98cb3e783d
 EBUILD lcdf-typetools-2.97.ebuild 859 SHA256 e94e6b7b5e923dfdb5f7daa6620770028bd7d96b525010ff00150aeeee0f5515 SHA512 355be165a0f5a69ecb4ae2aee2d52e98e40edfe91c43107fc33551301706efe9a8c3598afab0246b8e7eb88bdfe0d87802a990645898da6b0cca8b037f14cc78 WHIRLPOOL d55179e5fbd55ac371994301b4789a44f44af6da70e91fff0c3baca784c8dd71ad89229d9b9cd13b69f7a92c3a4c6d668413a812a974ea0662e82430c44b36b4
 EBUILD lcdf-typetools-2.98.ebuild 874 SHA256 31a445a9a3d494761874def89e773b3523f699735e6539eef07846eea5f221be SHA512 70fa1b688386f6f18cefdce33caa673396af3ef23b415c74b31890e5c67c1974331666fe8930b1e5004307bb7c21aee65356ec5dc5fcbf78444c821c1de0079f WHIRLPOOL b555cd47a63419a9c09bf1d3d3fa3a2b722ff68b46f39a32fbd7e3e049198d723f0de9ccd378ae101b69e420eccf39a1af5d3461fbb84e2f17595c55e99539b5
 EBUILD lcdf-typetools-2.99.ebuild 874 SHA256 3799eb24ae6b463b23b877a78bcbf7264e2522599476e6fc776abdc804fe5e6c SHA512 e4bb588c793205a2d19adeb6bb2c0e4ea322415bd75f867b1aa5609b60fd77a85a5b9735b8790e50c65bba1c47cfb1731dcc32574d0ea0a160d3d17147c7cdd6 WHIRLPOOL 12aa862723dc5ef5bd402a292578b72acb9fc75ec1b8be31bea80c59a5a2e13b7325317d275780ead7c15ae3e0a69e22c22247a3a4ef37110cabf271ed0029e3
-MISC ChangeLog 13149 SHA256 62c930d674fb5697808b75cfbc4954ef8a5b03ba5a33b4231405c3ba5757fc07 SHA512 45fea6ba1ef89630749c24508059824f0af64f97e1e8d2590af0561bea42f61093f9b5348260c38e237d87937f3c2b43b30dcde09833b83375533bae79da078b WHIRLPOOL f8ff607422b6a941aec51cee211f74e7a6e1e01f2e33004c31c97beecc3aca3086cdab23c95a5e80f4f85de69372d4e4634a16d174b135b8afc386514be1893e
+MISC ChangeLog 13311 SHA256 b525f93f2dedcd59c926f975d5238a8a02703de6f268a5937c7b05052182e7fd SHA512 0eaf12eb718fec60d31935543ad1282bae6800ec2421e2b24dab4c2fd73389f3f68e29fb063d3178fc0eb60072010983cf9ff432bfe6d66b36d912ff5915f968 WHIRLPOOL c84ebf539689b6af415415068bf3c8677c72eeb26bc3d5c6c639d2b5215137fc86be7182fe98927d3f6cc3acaa0abfde9ea4dcb77f54fddf2b29a5a9b506d353
 MISC metadata.xml 702 SHA256 c6d28057fc8880766a2b0e634e57d0b22e73d37b283309637b41da4e226d3c2e SHA512 dbce72477d9dcacd3d11f7536804f89e5d00d459386e7c339e036962487696be0d4e84319cbd350897239c0e6372888baece905fc52a485ac45c675e16ba2d01 WHIRLPOOL 6cedd54eee7d8b21ff6c4201b5306f8ec95c134969bfee416fd57a0652968e4ef4abbc02ea456e2665be70605dc595029f78f6b34a140344202121177c21cf63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQ3sAcACgkQvFcC4BYPU0oI+wCfRarMfgdgHCJQZw6qKxQ6Fggf
-mWoAni5BO6sZ7qPap8ykPkImEqKvPKGy
-=k4lc
+iEYEAREIAAYFAlWvi9UACgkQvFcC4BYPU0pqpQCdFe/ZT8x8Mmezb9/RFYgOF0bd
+F5gAn2gV8mqlxt05zZ65IZPrhKjMuJcr
+=OV7d
 -----END PGP SIGNATURE-----
