@@ -1,6 +1,10 @@
 # ChangeLog for app-text/lcdf-typetools
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.106 2014/10/10 10:08:06 aballier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.107 2015/07/22 12:25:56 aballier Exp $
+
+  22 Jul 2015; Alexis Ballier <aballier@gentoo.org>
+  lcdf-typetools-2.104.ebuild:
+  fix build with kpathsea from tl2015 and add explicit dep on it, bug #555286
 
 *lcdf-typetools-2.104 (10 Oct 2014)
 
